[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/entities/stalker.gd" type="Script" id=1]
[ext_resource path="res://textures/characters/actor_pistol.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 27.3453

[sub_resource type="CircleShape2D" id=2]
radius = 316.217

[node name="stalker" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.02271, -0.0296538 )
shape = SubResource( 1 )

[node name="VisionArea" type="Area2D" parent="."]

[node name="Vision" type="CollisionShape2D" parent="VisionArea"]
rotation = 4.71238
shape = SubResource( 2 )

[node name="ShotTimer" type="Timer" parent="."]
autostart = true

[node name="Ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_stalker_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_stalker_mouse_exited"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_VisionArea_body_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
